# PoseCNN

./: .gitignore  README.md
data/: objects.yaml
data/demo_models/: vgg16_fcn_color_single_frame_2d_pose_add_lov_iter_160000.ckpt.index
data/models/002_master_chef_can/: 3D_model.pcd
data/models/003_cracker_box/: 3D_model.pcd
data/models/004_sugar_box/: 3D_model.pcd
data/models/005_tomato_soup_can/: 3D_model.pcd
data/models/006_mustard_bottle/: 3D_model.pcd
data/models/007_tuna_fish_can/: 3D_model.pcd
data/models/008_pudding_box/: 3D_model.pcd
data/models/009_gelatin_box/: 3D_model.pcd
data/models/010_potted_meat_can/: 3D_model.pcd
data/models/011_banana/: 3D_model.pcd
data/models/019_pitcher_base/: 3D_model.pcd
data/models/021_bleach_cleanser/: 3D_model.pcd
data/models/024_bowl/: 3D_model.pcd
data/models/025_mug/: 3D_model.pcd
data/models/035_power_drill/: 3D_model.pcd
data/models/036_wood_block/: 3D_model.pcd
data/models/037_scissors/: 3D_model.pcd
data/models/040_large_marker/: 3D_model.pcd
data/models/051_large_clamp/: 3D_model.pcd
lib/: make.sh
lib/kinect_fusion/: CMakeLists.txt
lib/nms/: gpu_nms.cpp
lib/normals/: gpu_normals.cpp
lib/synthesize/: CMakeLists.txt
ros/: CMakeLists.txt  package.xml
ros/launch/: recongition_server.launch
ros/pose_cnn/: CMakeLists.txt  package.xml
ros/pose_cnn/cfg/: pose_cnn.cfg  (+1 more)
ros/pose_cnn_msgs/: CMakeLists.txt  package.xml
ros/src/: image_server.py  listener.py  recognition_server.py  test_client.py
ros/srv/: recognize.srv
ros/synthesizer/: CMakeLists.txt  package.xml
(+16 files in other folders)
